@@ -2,7 +2,6 @@ package com.ctrip.xpipe.redis.integratedtest;
 
 
 import com.ctrip.xpipe.redis.integratedtest.checker.CheckerAllTest;
-import com.ctrip.xpipe.redis.integratedtest.console.TestShutDown;
 import com.ctrip.xpipe.redis.integratedtest.metaserver.MetaServerAllTest;
 import org.junit.runner.RunWith;
 import org.junit.runners.Suite;
@@ -20,4 +19,5 @@ import org.junit.runners.Suite.SuiteClasses;
 })
 public class AllTesters {
 
+    /* add -Djdk.attach.allowAttachSelf=true for jdk11*/
 }
